# dianracing_driverless_recruiting

zhaolingzhe1751519/: dianracing_expectation_zhaolingzhe.txt  dianracing_homework_zhaolingzhe.txt
zhaolingzhe1751519/dianracing_opencv_zhaolingzhe/: .gitignore  CMakeLists.txt  README.md  main.cpp
zhaolingzhe1751519/dianracing_opencv_zhaolingzhe/Lib/: CMakeLists.txt  OpencvTest.cpp  OpencvTest.h
zhaolingzhe1751519/dianracing_projects_zhaolingzhe/: 2018数模国赛.cpp  2018数模校赛.cpp
zhaolingzhe1751519/dianracing_ros_zhaolingzhe/: README.md
zhaolingzhe1751519/dianracing_ros_zhaolingzhe/src/dianracing_test/: CMakeLists.txt  package.xml
zhaolingzhe1751519/dianracing_ros_zhaolingzhe/src/dianracing_test/src/: eval_three_ints_client.cpp  eval_three_ints_server.cpp  zhaolingzhe_publisher.cpp  zhaolingzhe_subscriber.cpp
